Fixing links (FH)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
                     of the Colony itself.
                 </h5>
                 <h5 class="col-md-8 offset-md-2">Further information on lore development and usage can be found on the
-                    <a class="light-link" href="/">Logos and Lore Usage
+                    <a class="light-link" href="https://nimbatcolony.info/usage-guidelines">Logos and Lore Usage
                         Guidelines</a> page.
                 </h5>
             </div>
@@ -35,11 +35,11 @@
         <mat-card-subtitle>
             <div class="row">
                 <h5 class="col-md-8 offset-md-2">The NimbatColony.info project is a labor of passion, and we’re
-                    overjoyed to see our <a class="light-link" href="https://www.patreon.com/nimbatcolony">Patreon</a>
+                    overjoyed to see our <a class="light-link" href="https://www.patreon.com/thenimbatcolony">Patreon</a>
                     supporters
                     aid us and cheer us on in the effort. If you’d like to be included and mentioned as one of these
                     supporters, please consider donating to our <a class="light-link"
-                        href="https://www.patreon.com/nimbatcolony">Patreon</a>!</h5>
+                        href="https://www.patreon.com/thenimbatcolony">Patreon</a>!</h5>
             </div>
         </mat-card-subtitle>
         <mat-card-content>
