update links (FH)

--- a/src/app/usage-guidelines/usage-guidelines.component.html
+++ b/src/app/usage-guidelines/usage-guidelines.component.html
@@ -4,15 +4,14 @@
             <h3>Usage Guidelines</h3>
         </mat-card-title>
         <mat-card-content>
-            <h5>As of right now, NimbatColony.info is the passion project of two Nimbat enthusiasts— Finn
-                (MurrchMadness), and Frequency (AmpFrequency). This is meant to be used as a setting for story writing,
-                art, and roleplay, and we're hoping for it to become a larger conglomerate of creators someday.</h5>
+            <h5>As of right now, NimbatColony.info is the passion project of a small team of Nimbat enthusiasts. This is meant to be used as a setting for story writing,
+                art, and roleplay. None of this is considered to be canon or official work when it comes to the origninal work of Dean Dodrill and his game, Dust: An Elysian Tail.</h5>
             <hr>
             <h5>If you'd like to:</h5>
             <h5>Develop lore or assist with development in general,</h5>
             <h5>Write a story using the setting,</h5>
             <h5>Add visual elements of the setting to your social media profiles (including but not limited to
-                F-List, Twitter, and Discord),</h5>
+                F-List, BlueSky, and Discord),</h5>
             <h5>Donate??</h5>
             <hr>
             <h5>Please send us a message anywhere listed below. The first line of your message should reference this
@@ -23,7 +22,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h1 style="text-align:center">Twitter</h1>
+                        <h1 style="text-align:center">BlueSky</h1>
                     </div>
                     <div class="col">
                         <h1 style="text-align:center">Discord</h1>
@@ -38,26 +37,21 @@
                 <div class="row">
                     <div class="col">
                         <h5 style="text-align:center">Send a DM or &#64; to:</h5>
-                        <h5 style="text-align:center"><a href="https://twitter.com/NimbatColony">&#64;NimbatColony</a></h5>
-                        <h5 style="text-align:center"><a href="https://twitter.com/PureOfHeartlin">&#64;PureOfHeartlin</a>
-                        </h5>
-                        <h5 style="text-align:center"><a href="https://twitter.com/AmpFrequency">&#64;AmpFrequency</a></h5>
+                        <h5 style="text-align:center"><a href="https://bsky.app/profile/nimbatcolony.info">&#64;NimbatColony</a></h5>
                     </div>
                     <div class="col">
                         <h5 style="text-align:center">Send a message to:</h5>
-                        <h5 style="text-align:center">MurrchMadness#3634</h5>
-                        <h5 style="text-align:center">Frequency#6937</h5>
-                        <h5 style="text-align:center">Or join the <a
-                                href="https://www.google.com/url?q=https%3A%2F%2Fdiscord.gg%2FCTjE4hVErm&sa=D&sntz=1&usg=AOvVaw0-cg6BDECHlttlnwSnnWGz">Discord</a>!
+                        <h5 style="text-align:center">Join the <a
+                                href="https://discord.gg/thenimbatcolony">Discord</a>!
                         </h5>
                     </div>
                     <div class="col">
                         <h5 style="text-align:center">Send a Note to:</h5>
                         <h5 style="text-align:center"><a
-                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.f-list.net%2Fc%2Fthe%2520nimbat%2520colony&sa=D&sntz=1&usg=AOvVaw1Sub3lhKkIgGE_fUHeKqQS">The
+                                href="https://www.f-list.net%2Fc%2Fthe%2520nimbat%2520colony">The
                                 Nimbat Colony</a></h5>
                         <h5 style="text-align:center"><a
-                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.f-list.net%2Fc%2Fyour%2520nimbat%2520advocate&sa=D&sntz=1&usg=AOvVaw3Qwz2hh2TR7KSQ_Vw3jIB1">Your
+                                href="https://www.f-list.net%2Fc%2Fyour%2520nimbat%2520advocate">Your
                                 Nimbat Advocate</a></h5>
                     </div>
                     <div class="col">
@@ -80,7 +74,7 @@
                 <div class="col-5">
                     <h4 style="text-align:end">Finn Heartlin</h4>
                     <h6 style="text-align:end"><a
-                            href="https://twitter.com/PureOfHeartlin">&#64;PureOfHeartlin</a>
+                            href="https://bsky.app/profile/finn.nimbatcolony.info">&#64;PureOfHeartlin</a>
                     </h6>
                     <h6 style="text-align:end">Lead Designer</h6>
                     <h5 style="text-align:end">Finn's a communications student based out of New England, </h5>
@@ -89,22 +83,22 @@
                 <div class="col-1">
                     <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/developer-profiles/finn.jpg"></div>
                     <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a
-                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fbastika%2F&sa=D&sntz=1&usg=AOvVaw0iJsgSpXHqOe1jo-invm_Y">Bastika</a></small>
+                                href="https://www.furaffinity.net%2Fuser%2Fbastika">Bastika</a></small>
                     </h6>
                 </div>
                 <div class="col-1">
                     <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/developer-profiles/frequency.png"></div>
                     <p><small style="font-size:0.75rem;">Art by <a
-                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fhotcoffeecat%2F&sa=D&sntz=1&usg=AOvVaw2yA-P8DPQBCb_MKXPOkaWn">HotCoffeeCat</a></small>
+                                href="www.furaffinity.net%2Fuser%2Fhotcoffeecat">HotCoffeeCat</a></small>
                     </p>
                 </div>
                 <div class="col-5">
                     <h4>Frequency</h4>
                     <h6><a
-                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fampfrequency&sa=D&sntz=1&usg=AOvVaw02q19DabwsFBehH9gteubi">&#64;AmpFrequency</a>
+                            href="https://bsky.app/profile/frequency.nimbatcolony.info">&#64;AmpFrequency</a>
                     </h6>
                     <h6>Lead Writer</h6>
-                    <h5>Frequency's a biology student from the Midwest,</h5>
+                    <h5>Frequency's a biology graduate from the Midwest,</h5>
                     <h5> with further studies in anthropology.</h5>
                 </div>
             </div>
@@ -112,7 +106,7 @@
                 <div class="col-5">
                     <h4 style="text-align:end">Astrodyne</h4>
                     <h6 style="text-align:end"><a
-                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">&#64;Astrodyne</a>
+                            href="https://bsky.app/profile/constelliuer.bsky.social">&#64;Astrodyne</a>
                     </h6>
                     <h6 style="text-align:end">Lead Artist</h6>
                     <h5 style="text-align:end">Part-time artist; Full-time problem.</h5>
@@ -120,7 +114,7 @@
                 <div class="col-1">
                     <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/developer-profiles/astrodyne.png"></div>
                     <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a
-                                href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">Astrodyne</a></small>
+                                href="https://bsky.app/profile/constelliuer.bsky.social">Astrodyne</a></small>
                     </h6>
                 </div>
                 <div class="col-1">
@@ -132,7 +126,7 @@
                 <div class="col-5">
                     <h4>Arcfire</h4>
                     <h6><a
-                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2FArcfireFox&sa=D&sntz=1&usg=AOvVaw3FDfgw0XzOgWV_r4316WiI">&#64;ArcfireFox</a>
+                            href="https://bsky.app/profile/arcfire.nimbatcolony.info">&#64;ArcfireFox</a>
                     </h6>
                     <h6>Lead Web Developer</h6>
                     <h5>Foxy menace stuck in the Southwest,</h5>
