--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,7 +53,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <h4 style="text-align:center;">The Cat of Tens</h4>
+                                <h4 style="text-align:center;">None, currently!</h4>
                             </div>
                         </div>
                     </div>
@@ -66,16 +66,16 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <h5 style="text-align:center;">Sepa Ixen</h5>
+                                <h5 style="text-align:center;">Entity Veyl</h5>
                             </div>
                             <div class="col">
-                                <h5 style="text-align:center;">Ermir</h5>
+                                <h5 style="text-align:center;">Chimeric Knight</h5>
                             </div>
                             <div class="col">
-                                <h5 style="text-align:center;">Artemis</h5>
+                                <h5 style="text-align:center;">Eriah Sylverstone</h5>
                             </div>
                             <div class="col">
-                                <h5 style="text-align:center;">Glacialis</h5>
+                                <h5 style="text-align:center;">Miccau</h5>
                             </div>
                             <div class="col">
                                 <h5 style="text-align:center;">MoonlightEV</h5>
@@ -85,7 +85,7 @@
                     <mat-divider></mat-divider>
                     <div class="row">
                         <div class="col-md-12 align-self-center" style="text-align:center">
-                            <h3><u>Peon</u></h3>
+                            <h3><u>Respected</u></h3>
                         </div>
                     </div>
                     <div class="container">
@@ -103,10 +103,10 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div style="text-align:center;">Ares Tyler Lynx</div>
+                            <div style="text-align:center;">Silentspirit</div>
                         </div>
                         <div class="col">
-                            <div style="text-align:center;">Ranger_Savage</div>
+                            <div style="text-align:center;">Pimpinbee</div>
                         </div>
                     </div>
                     <mat-divider></mat-divider>
