taxonomy push w/o images

--- a/src/app/taxonomy/taxonomy.component.html
+++ b/src/app/taxonomy/taxonomy.component.html
@@ -2,7 +2,8 @@
     <mat-card>
         <mat-card-title>
             <div class="row">
-                <h3 class="col-md-8 offset-md-2">Nimbat Taxonomy</h3></div>
+                <h3 class="col-md-8 offset-md-2">Nimbat Taxonomy</h3>
+            </div>
         </mat-card-title>
         <mat-card-content>
             <div class="row">
@@ -47,9 +48,201 @@
                     </h5>
                     <h5>Nimbats are creatures with an inherent arcane or magical ability. A vast majority have been
                         observed
-                        to display these abilities on a regular basis. More information can be found <a href="magical-capabilities"
-                            class="light-link">here</a>.</h5>
+                        to display these abilities on a regular basis. More information can be found <a
+                            href="magical-capabilities" class="light-link">here</a>.</h5>
                 </div>
+            </div>
+        </mat-card-content>
+    </mat-card>
+    <mat-card>
+        <mat-card-title>
+            <div class="row">
+                <h3 class="col-md-8 offset-md-2">Nimbat Subspecies</h3>
+            </div>
+        </mat-card-title>
+        <mat-card-content>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h5>Below is a working outline of six observed Nimbat subspecies, while we conduct future studies
+                        and interviews over the physiology of these variants. It has been made noteworthy that like any
+                        typical case example of Pterofelis Dodrilis, they practice communicable sentience and are
+                        capable of expression, moral compasses, and advanced social structures. These subspecies are
+                        capable of interbreeding, and mixed offspring do not portray sterility, giving credence to the
+                        notion that “mixed” Nimbats are fairly common.</h5>
+                    <hr>
+                    <h5 class="notes">
+                        “You know Soteria, right? One of the Sect leaders in Protection? I know for a dang fact that one
+                        of his parents was a, uh, “cavernous” type. You ever see his eyes? How about the fact that he
+                        hides himself in a cloak more often than not? I’d ask him myself if the Sun bothers him a
+                        little, but, I can only get so close before I stammer and sweat like I’m in speech therapy.” -
+                        Anonymous</h5>
+                    <hr>
+                </div>
+            </div>
+            <div class="row pb-1">
+                <h5 class="col-md-6 offset-md-2">
+                    <h4>Woodland Nimbat
+                    </h4>
+                    Examination of Scribing records and potential evolution timelines have created proposals within
+                    research groups that the Woodland subspecies might be the starting progenitor for the other examples
+                    on this page. The working theory suggests that early Woodland Nimbats migrated into different
+                    climate zones and biomes, for reasons we have yet to determine, and over millions of years had
+                    developed into these standards we see today. The Woodland Nimbat is often described as the
+                    “intrinsic balance” of physiology, without any exceptional traits that aid in their survival to the
+                    temperate forest climate. Most Colony Nimbats tend to be of the Woodland variety.
+                    <div class="notes">“Look at all the other types of Nimbats out there. You got the folks with
+                        freakishly big wings that
+                        cruise through storms, there’s the stocky fellas that survive the tundra, and there’s those
+                        really
+                        tall and athletic guys from the savannah. You know what we got? We got ORANGE.” - Brianna,
+                        Progression Elder</div>
+                </h5>
+                <div class="col-md-2">
+                    <div style="text-align:center"><img
+                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+                            src="assets/sketches/woodland.png"></div>
+                </div>
+                <div class="col-md-8 offset-md-2">
+                    <hr>
+                </div>
+            </div>
+            <div class="row pb-1">
+                <div class="col-md-2 offset-md-2">
+                    <div style="text-align:center"><img
+                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+                            src="assets/sketches/tundra.png"></div>
+                </div>
+                <h5 class="col-md-6">
+                    <h4>Tundra Nimbat
+                    </h4>
+                    The Tundra Nimbat might have emerged not unlike how early humans could have crossed a massive bridge
+                    of ice to settle into the lands found in many latitudes above 60° N. Colder and windier environs
+                    have been known to induce some kind of mania within other subspecies (the most prominent symptom of
+                    which being incomprehensible vocalizations or ”speaking gibberish”). The Tundra Nimbat avoids this
+                    condition, largely due to their ability to trap more heat within their much thicker, poofier hides
+                    and more-pronounced body fat. This creates some issues with flight, since there is more weight to
+                    carry, and opening the wings is ill-advised for one trying to sustain warmth. Should flight be
+                    necessary, Tundra Nimbats often do so in very short bursts, akin to ducks or chickens, although they
+                    may let the wind try to do most of the work. Otherwise, this variant is largely grounded, opting to
+                    use their winged limbs to hold something tightly to their bodies.
+                    <div class="notes">“Don’t you ever think they’re out of shape just because they’re…poofy. Those
+                        snow-blown Nimbats carry luggage on their backs that probably weigh more than my house, and
+                        still have enough room to hold a kit or two in there.” - Anonymous</div>
+                </h5>
+                <div class="col-md-8 offset-md-2">
+                    <hr>
+                </div>
+            </div>
+            <div class="row pb-1">
+                <h5 class="col-md-6 offset-md-2">
+                    <h4>Grassland Nimbat
+                    </h4>
+                    The first preliminary studies on the Grassland Nimbat suggested that a link between this subspecies,
+                    servals, and savannah cats had been formed at some point in evolutionary history. While such
+                    postulations have yet to be examined further, the resemblances are not unfounded. This variant is
+                    known for residing in areas with tall grasses and scarce tree growth. Taller ears and slender,
+                    lankier bodies make up their forms, and spots/rosettes adorn their fur. Their stature allows them to
+                    duck low to the ground to avoid being seen or perk up very high to gauge their surroundings.
+                    Grassland Nimbats are naturally athletic and nimble, able to break out into a sprint at speeds of
+                    20mph (approx. 32kph). Their wings are wide and strong, but their membranes and bone structures do
+                    not encourage rapid beating. Instead, they are more prone to glide and move about the air constantly
+                    like hawks.<div class="notes">
+                        “I see this guy every Wednesday, he’s almost twice my height. But he’s so easily excited and
+                        keeps
+                        forgetting that he just blankets and smothers over me whenever he hugs me. It’s pretty funny
+                        when he
+                        has to duck to go through doors, heh.” - Jodan, 3rd-Shift Agriculture Pest Technician</div>
+                </h5>
+                <div class="col-md-2">
+                    <div style="text-align:center"><img
+                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+                            src="assets/sketches/grassland.png"></div>
+                </div>
+                <div class="col-md-8 offset-md-2">
+                    <hr>
+                </div>
+            </div>
+            <div class="row pb-1">
+                <div class="col-md-2 offset-md-2">
+                    <div style="text-align:center"><img
+                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+                            src="assets/sketches/galerider.png"></div>
+                </div>
+                <h5 class="col-md-6">
+                    <h4>Galerider Nimbat
+                    </h4>
+                    Hailing from a tradition of nomadic lifestyles, the Galeriders are known to spend days to weeks in
+                    the sky, soaring at altitudes scoring up to 35,000 feet (approx. 10,668 meters). They roost in the
+                    higher reaches of mountainous regions, where they stop to feed themselves or attend to their young.
+                    To achieve this habitual living, their most striking feature—being their wings—tend to be much
+                    larger than even the most exceptional Woodland Nimbat, boasting of a whopping 2:1 ratio of wingspan
+                    to height. Since they spend most of their time traveling, magical practices tend to stay limited to
+                    something more immediate and utilitarian. From simple flames to wind manipulation, but never
+                    stepping into teleportation or portaling tricks.
+
+                    <div class="notes">“Record-holders in Scribing insist that the longest time in-flight lasted for 24
+                        days, 5 hours, and 14 minutes—and this achievement was, naturally, produced by a Galerider.
+                        However, Nimbat denizens hailing from the mountaintops within [REDACTED] speak at length about a
+                        traditional legend depicting a Galerider having flown for an entire season (potentially four
+                        months) in order to herald the coming of summer’s wrath.”* - Researcher ???</div>
+                </h5>
+                <hr>
+            </div>
+            <div class="row pb-1">
+                <h5 class="col-md-6 offset-md-2">
+                    <h4>Cave Nimbat
+                    </h4>
+                    A primarily subterranean subspecies, Cave Nimbats are regarded as the oddest of the bunch. They are
+                    described as “scrunkly”, and alien. They have much larger eyes, but are pupilless. Their paws are
+                    thinner, with sharper claws, used to climb rock more easily. Their wings are strong, but are not
+                    meant for gliding, hovering, or flying- but for jumping, used as a way to “boost” to higher cliff
+                    faces within caves. They have shorter to very little fur, and large ears, leading them to be often
+                    more soft spoken as a result. Their vision dips deeply into the infrared spectrum, and it is
+                    reported they have a sensitivity to UV light, including sunlight. This does not mean they are
+                    nocturnal, instead opting to wear hoods to protect their eyes from direct sunlight if they are to
+                    venture out of their cave during daylight hours.<div class="notes">
+                        “Soteria’s told me that they use infrared lighting in their caves, and are able to see perfectly
+                        well. Note to self: Ask Acquisition if they’re able to get me a pair of night vision goggles…”
+                    </div>
+                </h5>
+                <div class="col-md-2">
+                    <div style="text-align:center"><img
+                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+                            src="assets/sketches/cave.png"></div>
+                </div>
+                <div class="col-md-8 offset-md-2">
+                    <hr>
+                </div>
+            </div>
+            <div class="row pb-1">
+                <div class="col-md-2 offset-md-2">
+                    <div style="text-align:center"><img
+                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+                            src="assets/sketches/cave.png"></div>
+                </div>
+                <h5 class="col-md-6">
+                    <h4>Aquatic Nimbat
+                    </h4>
+                    These water-dwelling Nimbats bear a physiology that closely resembles mustelids, however they also
+                    bear a few features that are decidedly aquatic—thus the colloquial nomenclature of “Aquatic Nimbats”
+                    was discerned. This type is known to live on islands, especially within archipelagos and similar
+                    geographical arrangements. In the water, they are excellent hunters, using their wings, tail, and
+                    webbed digits to quickly close the distance to catch fish, crustaceans, and even small turtles.
+                    Prominent gill-like markings can be seen on their shoulders, which can attract parasites to be
+                    trapped and eaten as well. Due to their heavy wings being more suited for mobility in water, they
+                    are flightless. When they are not hunting or traversing, they stay in areas closer to the water,
+                    such as in damp, rocky areas that are kept moist by the tide.
+
+                    <div class="notes">“First recorded encounter with mustelid-based subvariant, June 13th. Personal
+                        forays on the coast of [REDACTED] with the intended purpose of documenting sea turtle behavior
+                        (and because I just like looking at them) resulted in a happenstance and mutual meeting. The
+                        subsequent personality was quick to engage in investigative yet intrusively affectionate
+                        behavior (my face STILL tickles) before extending an invitation to partake in the tide with
+                        them. I…decided to brave my aversion to water, in order to get more answers out of them. After
+                        publishing this account, I’m going to take two days of personal time to decompress after the
+                        intense cross-behavioral exchange.” -Katell, Preservation Elder</div>
+                </h5>
+                <hr>
             </div>
         </mat-card-content>
     </mat-card>
