fuck it we ball

--- a/src/app/taxonomy/taxonomy.component.html
+++ b/src/app/taxonomy/taxonomy.component.html
@@ -99,8 +99,8 @@
                 </h5>
                 <div class="col-md-2">
                     <div style="text-align:center"><img
-                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
-                            src="assets/sketches/woodland.png"></div>
+                            style="width: 55%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+                            src="assets/sketches/jena.png"></div>
                 </div>
                 <div class="col-md-8 offset-md-2">
                     <hr>
@@ -108,9 +108,9 @@
             </div>
             <div class="row pb-1">
                 <div class="col-md-2 offset-md-2">
-                    <div style="text-align:center"><img
-                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
-                            src="assets/sketches/tundra.png"></div>
+                    <div style="text-align:center">
+                            Image to come! Stay tuned!
+                        </div>
                 </div>
                 <h5 class="col-md-6">
                     <h4>Tundra Nimbat
@@ -155,7 +155,7 @@
                 </h5>
                 <div class="col-md-2">
                     <div style="text-align:center"><img
-                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+                            style="width: 65%; height: 50%;margin-top: 15px;margin-bottom: 15px"
                             src="assets/sketches/grassland.png"></div>
                 </div>
                 <div class="col-md-8 offset-md-2">
@@ -164,9 +164,12 @@
             </div>
             <div class="row pb-1">
                 <div class="col-md-2 offset-md-2">
-                    <div style="text-align:center"><img
+                    <div style="text-align:center">
+                        <!-- <img
                             style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
-                            src="assets/sketches/galerider.png"></div>
+                            src="assets/sketches/galerider.png"> -->
+                            Image to come! Stay tuned!
+                        </div>
                 </div>
                 <h5 class="col-md-6">
                     <h4>Galerider Nimbat
@@ -186,7 +189,7 @@
                         traditional legend depicting a Galerider having flown for an entire season (potentially four
                         months) in order to herald the coming of summer’s wrath.”* - Researcher ???</div>
                 </h5>
-                <hr>
+                <div class="col-md-8 offset-md-2"><hr></div>
             </div>
             <div class="row pb-1">
                 <h5 class="col-md-6 offset-md-2">
@@ -207,7 +210,7 @@
                 </h5>
                 <div class="col-md-2">
                     <div style="text-align:center"><img
-                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+                            style="width: 105%; height: 50%;margin-top: 15px;margin-bottom: 15px"
                             src="assets/sketches/cave.png"></div>
                 </div>
                 <div class="col-md-8 offset-md-2">
@@ -217,8 +220,8 @@
             <div class="row pb-1">
                 <div class="col-md-2 offset-md-2">
                     <div style="text-align:center"><img
-                            style="width: 45%; height: 50%;margin-top: 15px;margin-bottom: 15px"
-                            src="assets/sketches/cave.png"></div>
+                            style="width: 105%; height: 50%;margin-top: 15px;margin-bottom: 15px"
+                            src="assets/sketches/aquatic.png"></div>
                 </div>
                 <h5 class="col-md-6">
                     <h4>Aquatic Nimbat
